# incari

./: .env  README.md  pyproject.toml
incari/: __main__.py  prompt.py
incari/tests/: examples.py  test_assistant_output.py
